@@ -5,6 +5,7 @@ Process Hacker
    * Added copy support to PE viewer
    * Added Connect Time, Disconnect Time and Last Input Time 
      to session properties
+   * Added more working set counters to the Statistics tab
  * FIXED:
    * Column sort arrows
    * CPU usage calculations
